# yarp

bindings/: yarp.i
doc/: Doxyfile.in  yarp-doxygen-footer.html  yarp-doxygen-header.html
example/dev/: CMakeLists.txt
example/dev/simpleFtClient/: CMakeLists.txt  simpleFtClient.cpp
src/devices/: CMakeLists.txt
src/devices/IChatBotAdminMsgs/: CMakeLists.txt  IChatBotAdminMsgs.thrift
src/devices/IChatBotAdminMsgs/idl_generated_code/: IChatBotAdminMsgs.cpp  IChatBotAdminMsgs.h  IChatBotAdminMsgs_index.txt  return_backupBot.cpp  return_backupBot.h
src/devices/IChatBotMsgs/: IChatBotMsgs.thrift
src/devices/IChatBotMsgs/idl_generated_code/: IChatBotMsgs.cpp  IChatBotMsgs.h  IChatBotMsgs_index.txt
src/devices/chatBotAdmin_nwc_yarp/: CMakeLists.txt  ChatBotAdmin_nwc_yarp.cpp  ChatBotAdmin_nwc_yarp.h
src/devices/chatBotAdmin_nwc_yarp/tests/: CMakeLists.txt  chatBotAdmin_nwc_yarp_test.cpp
src/devices/chatBotAdmin_nws_yarp/: CMakeLists.txt  ChatBotAdmin_nws_yarp.cpp  ChatBotAdmin_nws_yarp.h  IChatBotAdminMsgsImpl.cpp
src/devices/chatBotAdmin_nws_yarp/tests/: CMakeLists.txt  chatBotAdmin_nws_yarp_test.cpp
src/devices/chatBot_nws_yarp/: ChatBotRPC_CallbackHelper.cpp
src/devices/clockNetworkWrappers/: CMakeLists.txt  Clock_nws_yarp.cpp  Clock_nws_yarp.h
src/devices/clockService/: CMakeLists.txt  clockService.thrift
src/devices/clockService/idl_generated_code/: ClockRPC.cpp  ClockRPC.h  clockService_index.txt  return_getClock.cpp  return_getClock.h
src/devices/fakeChatBotAdminDevice/: CMakeLists.txt  FakeChatBotAdminDevice.cpp  FakeChatBotAdminDevice.h
src/devices/fakeChatBotAdminDevice/tests/: CMakeLists.txt  fakeChatBotAdminDevice_test.cpp
src/devices/fakeChatBotDevice/: FakeChatBotDevice.cpp  FakeChatBotDevice.h
src/devices/fakeChatBotDevice/tests/: fakeChatBotDevice_test.cpp
src/devices/fakeClock/: CMakeLists.txt  FakeClock.cpp  FakeClock.h
src/devices/fakeLaser/: fakeLaser.cpp
src/devices/fakeLocalizerDevice/: fakeLocalizerDev.cpp  fakeLocalizerDev.h
src/devices/frameTransformClient/: CMakeLists.txt
src/devices/frameTransformGet/: CMakeLists.txt  frameTransformGet_nws_ros.cpp  frameTransformGet_nws_ros.h
src/devices/frameTransformServer/: CMakeLists.txt
src/devices/localization2DClient/: Localization2DClient.cpp  Localization2DClient.h
src/devices/localization2DServer/: Localization2DServer.cpp
src/devices/map2DServer/: Map2DServer.cpp
src/devices/navigation2DClient/: Navigation2DClient.cpp  Navigation2DClient.h
src/devices/navigation2DServer/: navigation2DServer.cpp
src/libYARP_dev/src/: CMakeLists.txt
(+43 files in other folders)
